Fix safari and firefox not showing carousel button

--- a/components/carousel/styles.module.css
+++ b/components/carousel/styles.module.css
@@ -22,6 +22,8 @@
   background: var(--colorBlack);
   position: absolute;
   bottom: 5px;
+  left: 50%;
+  margin-left: -12px;
 }
 
 .content:hover .button {
